login updated, Local storege for login is now working, Login register and modification of the account is working: is necessary to make some test

--- a/orientalSite/Anime.html
+++ b/orientalSite/Anime.html
@@ -7,7 +7,7 @@
   	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 		<link rel="stylesheet" href="style/style.css">
 	</head>
-	<body background="pictures/fondo02.jpg" style="padding-top: 70px;">
+	<body background="pictures/fondo08.jpg" style="padding-top: 70px;">
 		<section>
 		 		<nav class="navbar navbar-inverse navbar-fixed-top col-sm-12 col-md-12 col-lg-12" role="navigation">
 				  <div class="container-fluid">
@@ -27,8 +27,8 @@
 				    </div>
 				    <div class="navbar-header col-sm-4 col-md-4 col-lg-4">
 					    <ul class="nav navbar-nav navbar-right">
-					      <li><a href="SignUp.html"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
-					      <li><a href="Login.html"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+					      <li><a href="login/registrationForm.html"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
+					      <li><a href="login/mainLogin.html"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
 					      <li><a href="adminlogin.html"><span class="glyphicon glyphicon-user"></span> Admin</a></li>
 					    </ul>
 				    </div>
@@ -78,9 +78,7 @@
 					    </div>
 				    </div>
 			    </div>
-
 				<div class="text-center">
-
 				</div>
 
 				<nav class="navbar navbar-inverse">
@@ -126,13 +124,14 @@
 				 </div>
 
 				<div class="container-fluid">
+					<br/>
 					<div class="row">
-					    <div class="col-sm-3 col-md-3 col-lg-3">
-					      <h3>
+					    <div class="col-sm-2 col-md-2 col-lg-2">
+					      <h4>
 					        <strong>
-					        	Watch our last content
+					        	Our last content
 					        </strong>
-					      </h3>
+					      </h4>
 					      <br>
 					      <p>
 					      	<a href="#">
@@ -159,20 +158,32 @@
 					      	</a>
 					      </p>
 					    </div>
-					    <div class="col-sm-6 col-md-6 col-lg-6">
+					    <div class="col-sm-8 col-md-8 col-lg-8">
 								<!-- this part is the container of the links in the middle of the grid -->
 								<div class="row">
-									<div class="col-sm-4">
+									<div class="col-sm-3">
 										<div class="thumbnail">
-											<a href="pictures/list/hyakkaRyouranSamuraiGirls.jpg">
-												<img class="img-responsive" src="pictures/list/hyakkaRyouranSamuraiGirls.jpg" alt="Lights" style="width:100%">
+											<a href="pictures/list/swordArtOnline.jpg">
+												<img class="img-responsive" src="pictures/list/swordArtOnline.jpg" alt="Lights" style="width:100%">
 												<div class="caption">
-													<p class="text0">Hyakka Ryouran Samurai Girls</p>
+													<p class="text0">Sword Art Online</p>
+													<br/>
 												</div>
 											</a>
 										</div>
 									</div>
-									<div class="col-sm-4">
+									<div class="col-sm-3 col-md-3 col-lg-3">
+										<div class="thumbnail">
+											<a href="pictures/list/bleach.jpg">
+												<img class="img-responsive" src="pictures/list/bleach.jpg" alt="Lights" style="width:100%">
+												<div class="caption">
+													<p class="text0">Bleach</p>
+													<br/>
+												</div>
+											</a>
+										</div>
+									</div>
+									<div class="col-sm-3 col-md-3 col-lg-3">
 										<div class="thumbnail">
 											<a href="pictures/list/k-project.jpg">
 												<img class="img-responsive" src="pictures/list/k-project.jpg" alt="Lights" style="width:100%">
@@ -183,7 +194,7 @@
 											</a>
 										</div>
 									</div>
-									<div class="col-sm-4">
+									<div class="col-sm-3 col-md-3 col-lg-3">
 										<div class="thumbnail">
 											<a href="pictures/list/steinsGate.jpg">
 												<img class="img-responsive" src="pictures/list/steinsGate.jpg" alt="Lights" style="width:100%">
@@ -196,7 +207,17 @@
 									</div>
 								</div>
 								<div class="row">
-									<div class="col-sm-4">
+									<div class="col-sm-3 col-md-3 col-lg-3">
+										<div class="thumbnail">
+											<a href="pictures/list/fullMetal.jpg">
+												<img class="img-responsive" src="pictures/list/fullMetal.jpg" alt="Lights" style="width:100%">
+												<div class="caption">
+													<p class="text0">Full Metal Alchemist Brotherhood</p>
+												</div>
+											</a>
+										</div>
+									</div>
+									<div class="col-sm-3 col-md-3 col-lg-3">
 										<div class="thumbnail">
 											<a href="pictures/list/bakuman.jpg">
 												<img class="img-responsive" src="pictures/list/bakuman.jpg" alt="Lights" style="width:100%">
@@ -207,7 +228,7 @@
 											</a>
 										</div>
 									</div>
-									<div class="col-sm-4">
+									<div class="col-sm-3 col-md-3 col-lg-3">
 										<div class="thumbnail">
 											<a href="pictures/list/CodeGeass.jpg">
 												<img class="img-responsive" src="pictures/list/CodeGeass.jpg" alt="Lights" style="width:100%">
@@ -218,7 +239,7 @@
 											</a>
 										</div>
 									</div>
-									<div class="col-sm-4">
+									<div class="col-sm-3 col-md-3 col-lg-3">
 										<div class="thumbnail">
 											<a href="pictures/list/dGrayMan.jpg">
 												<img class="img-responsive" src="pictures/list/dGrayMan.jpg" alt="Lights" style="width:100%">
@@ -231,9 +252,9 @@
 									</div>
 								</div>
 					    </div>
-					    <div class="col-sm-3 col-md-3 col-lg-3">
+					    <div class="col-sm-2 col-md-2 col-lg-2">
 					      <img class="img-responsive" src="pictures/music.png" alt="Chania">
-							  <audio controls = "controls" autoplay = "autoplay" loop = "loop">
+							  <audio class="audioResponsive" controls = "controls" autoplay = "autoplay">
 								<source src = "sound/song1.mp3" type = "audio/mpeg" />
 							  </audio>
 							</div>
