--- a/orientalSite/Anime.html
+++ b/orientalSite/Anime.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
-	<head>
+<html lang="en">
 		<meta charset="utf-8">
 	  <meta name="viewport" content="width=device-width, initial-scale=1">
 	  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 		<link rel="stylesheet" href="style/style.css">
-	</head>
 	<body background="pictures/fondo08.jpg" style="padding-top: 70px;">
 		<section>
 		 		<nav class="navbar navbar-inverse navbar-fixed-top col-sm-12 col-md-12 col-lg-12" role="navigation">
@@ -27,8 +26,8 @@
 				    </div>
 				    <div class="navbar-header col-sm-4 col-md-4 col-lg-4">
 					    <ul class="nav navbar-nav navbar-right">
-					      <li><a href="login/registrationForm.html"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
-					      <li><a href="login/mainLogin.html"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+					      <li><a href="login/registrationForm/registrationForm.html"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
+					      <li><a href="login/mainLoginForm/mainLoginForm.html"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
 					      <li><a href="adminlogin.html"><span class="glyphicon glyphicon-user"></span> Admin</a></li>
 					    </ul>
 				    </div>
@@ -260,8 +259,6 @@
 							</div>
 			    </div>
 		    </div>
-
 		</section>
-		<!--para asignar una posicion en la pantalla-->
 	</body>
 </html>
