The website now is able to insert anime data

--- a/orientalSite/AnimeII.html
+++ b/orientalSite/AnimeII.html
@@ -26,9 +26,8 @@
 				    </div>
 				    <div class="navbar-header col-sm-4">
 					    <ul class="nav navbar-nav navbar-right">
-					      <li><a href="login/registrationForm/registrationForm.html"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
-					      <li><a type="logout" class="glyphicon glyphicon-log-out" onclick="clearLocalStorage()">Logout</a></li>
-					      <li><a href="admin.html"><span class="glyphicon glyphicon-user"></span> Admin</a></li>
+					      <li><a id="logout" onclick="clearLocalStorage()"><span class="glyphicon glyphicon-log-out"></span>Logout</a></li>
+					      <li><a href="login/editInfoForm/editInfoForm.html"><span class="glyphicon glyphicon-user"></span> Edit my profile</a></li>
 					    </ul>
 				    </div>
 				  </div>
