--- a/orientalSite/animes/bleach/bleach (copia).html
+++ b/orientalSite/animes/bleach/bleach (copia).html
@@ -26,10 +26,11 @@
 			</nav>
 			<div class="container-fluid">
 				<div class="row">
-			    <div class="col-sm-8 col-md-8 col-lg-8 col-sm-offset-2 col-md-offset-2 col-lg-offset-2 sidenav" id="information">
+			    <div class="col-sm-8 col-sm-offset-2 sidenav">
 						<div class="row">
-								<div class="col-sm-12 col-md-12 col-lg-12 borderStyleComplete">
-									<h2 id="title">
+								<div class="col-sm-12 borderStyleComplete">
+									<h2>
+										Bleach 686/686 720p
 								  </h2>
 								</div>
 						</div>
@@ -40,7 +41,23 @@
 									<img class="img-responsive" src="pictures/bleach.jpg">
 								</div>
 								<div class="col-sm-7 borderStyleRight">
-									<div class="text-center" id="preDescription">
+									<div class="text-center">
+					         	<strong>Title: Bleach</strong>
+					         	<br>
+					         	<br>
+					         	<b>Genre: Accion, mistery, romance, sobrenatural, shonen</b>
+					         	<br>
+					         	<br>
+					         	<b>Estate: Finished </b>
+					         	<br>
+					         	<br>
+					         	<b>Languaje: Spanish</b>
+					         	<br>
+					         	<br>
+					         	<b>Chapters: 686/686</b>
+					         	<br>
+					         	<br>
+					         	<b>Author: Tite Kubo</b>
 					         </div>
 								</div>
 							</div>
@@ -65,9 +82,10 @@
 						</div>
 						<div class="row">
 							<div class="col-sm-12 borderStyleBottom">
-								<div class="col-sm-7 borderStyleLeft" id="sinopsis">
+								<div class="col-sm-7 borderStyleLeft">
 									<p>
-									</p>
+									 	Ichigo Kurosaki never asked for the ability to see ghosts—he was born with the gift. When his family is attacked by a Hollow—a malevolent lost soul—Ichigo becomes a Soul Reaper, dedicating his life to protecting the innocent and helping the tortured spirits themselves find peace.
+								 	</p>
 								</div>
 								<div class="col-sm-5">
 									<a href="">JIGOKU-HEN [Movie]</a>
@@ -189,7 +207,6 @@
 				</div>
 			</div>
 		</section>
-		<script src="localStorage.js"></script>
 	</body>
 	<footer>
 		<div class="col-sm-3 col-sm-offset-9">
