--- a/orientalSite/login/editInfoForm/editInfoForm.html
+++ b/orientalSite/login/editInfoForm/editInfoForm.html
@@ -48,7 +48,7 @@
 									</div>
 									<div class="form-group">
 										<label for="lg_newConfirmedPassword" class="sr-only">Confirm your new Password</label>
-										<input type="password" class="form-control" id="lg_newConfirmedPassword" name="lg_newConfirmedPassword" placeholder="Password Confirmed">
+										<input type="password" class="form-control" id="lg_newConfirmedPassword" name="lg_newConfirmedPassword" placeholder="New Password Confirmed">
 									</div>
 									<div class="form-group">
 										<label for="lg_fullname" class="sr-only">Full Name</label>
